# Google-Solutions

./: .dockerignore  .faircheckrc  .gitignore  Dockerfile  GEMINI.md  README.md  et --soft d79109f43979263a4879f8462896d3f95f8da61e  pyproject.toml  test.html  test_mitigate.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01/: 01-PLAN.md  01-RESEARCH.md  01-SUMMARY.md  01-UAT.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: cdeaa039dcd4_initial_schema.py
docs/: GOOGLE_PROTOTYPE_QUICKSTART.md  PRD.md
samples/: criminal_recidivism_data.csv  criminal_recidivism_model.pkl  education_admission_data.csv  education_admission_model.pkl  generate_all_samples.py  generate_insurance_improved.py  generate_sample.py  healthcare_triage_data.csv  healthcare_triage_model.pkl  hiring_data.csv  hiring_model.pkl  hiring_promotion_data.csv  hiring_promotion_model.pkl  insurance_claims_data.csv  insurance_claims_improved_data.csv  insurance_claims_improved_model.pkl  insurance_claims_model.pkl  lending_credit_data.csv  lending_credit_model.pkl  test_scan.py
src/faircheck/: config.py
tests/: test_algorithms.py  test_config.py  test_ingestion.py  test_integration_full.py  test_new_modules.py
tests/analysis/: __init__.py  test_domains.py  test_engine.py  test_metrics.py
tests/api/: test_health.py  test_lifecycle.py  test_sessions_persistence.py
tests/integration/: test_e2e.py
tests/mitigation/: __init__.py  test_pipeline.py
tests/reports/: __init__.py  test_data.py  test_regulation.py  test_renderers.py
tui/: package-lock.json  package.json  tsconfig.json
tui/src/: api.ts  cli.tsx  orchestrator.ts
web/: .firebaserc  index.html  package-lock.json  package.json  vite.config.ts
web/.firebase/: hosting.ZGlzdA.cache
web/src/: App.tsx  index.css
(+146 files in other folders)
