[project]
name = "faircheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JUSTMEETPATEL", email = "justmeetpatel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aif360>=0.6.1",
    "alembic>=1.13.0",
    "fairlearn>=0.13.0",
    "fastapi[standard]>=0.115.0",
    "joblib>=1.4.0",
    "onnxruntime>=1.18.0",
    "pandas>=3.0.2",
    "pyarrow>=15.0.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
]
